# SSM

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  main.cpp
3rd_party_tools/: .gitignore
data/clustering/: cs.uef.fi_sipu_datasets_a1.txt  cs.uef.fi_sipu_datasets_a2.txt  cs.uef.fi_sipu_datasets_a2_sampled.txt  cs.uef.fi_sipu_datasets_a3.txt  cs.uef.fi_sipu_datasets_asymmetric.txt  cs.uef.fi_sipu_datasets_asymmetric.txt.txt  cs.uef.fi_sipu_datasets_dim032.txt  cs.uef.fi_sipu_datasets_dim032_sampled.txt  cs.uef.fi_sipu_datasets_dim064.txt  cs.uef.fi_sipu_datasets_dim128.txt  cs.uef.fi_sipu_datasets_overlap.txt  cs.uef.fi_sipu_datasets_s1_sampled.txt  cs.uef.fi_sipu_datasets_skewed.txt  cs.uef.fi_sipu_datasets_skewed_sampled.txt  cs.uef.fi_sipu_datasets_unbalance2.txt
data/clustering_raw/: link.txt
data/clustering_sample/: cs.uef.fi_sipu_datasets_60.txt  cs.uef.fi_sipu_datasets_a1_sampled.txt  cs.uef.fi_sipu_datasets_a3_sampled.txt  cs.uef.fi_sipu_datasets_asymmetric_sampled.txt  cs.uef.fi_sipu_datasets_overlap_sampled.txt  cs.uef.fi_sipu_datasets_s2_sampled.txt  cs.uef.fi_sipu_datasets_unbalance2_sampled.txt
data/facility_location/: 20_0.txt  20_1.txt  20_2.txt  20_3.txt  20_4.txt  40_0.txt  40_1.txt  40_2.txt  40_3.txt  40_4.txt  60_0.txt  60_1.txt  60_2.txt  60_3.txt  60_4.txt
data/hand_drawn/: hand1.edges
data/network-repository/: bio-dmela.edges  bio-yeast.edges  ca-AstroPh.edges  ca-CondMat.edges  econ-orani678.edges  fb-pages-media.edges  ia-escorts-dynamic.edges  soc-advogato.edges  soc-anybeat.edges  soc-gemsec-HU.edges  soc-gemsec-RO.edges  soc-wiki-Vote.edges
data/network-repository-old/: bio-diseasome.edges  bio-dmela.edges  bio-yeast.edges  ca-AstroPh.edges  ca-CSphd.edges  ca-CondMat.edges  ca-Erdos992.edges  ca-GrQc.edges  ca-HepPh.edges  ca-netscience.edges  econ-beause.edges  econ-mahindas.edges  econ-orani678.edges  econ-poli-large.edges  ia-escorts-dynamic.edges  inf-openflights.edges  inf-power.edges  soc-advogato.edges  soc-anybeat.edges  soc-wiki-Vote.edges
data/test/: dp_large.dp  friends.edges  germany.edges  graph1.edges  test1.dp  test1.edges  test2.edges
src/algorithms/: BFSearch.h  CandidateManager.h  PBFAlgorithm.h  SICache.h  TreeSearch.h  UB2DAlgorithm.h  UB2DStorage.cpp  UB2DStorage.h  UpperBoundManager.h
src/structures/: DataPoints.h  DataPointsEuclidianDistance.h  FacilityLocation.h  Graph.h  GraphNegativeGroupFarness.h  GraphPartialDominatingSet.h  StructureInterface.h
src/utility/: AlgorithmConfiguration.cpp  AlgorithmConfiguration.h  DataPointGeneration.cpp  DataPointGeneration.h  GraphGeneration.cpp  GraphGeneration.h  JSONUtil.cpp  JSONUtil.h  Util.cpp  Util.h  VectorOfVectors.h
tests/: DataPointsEuclidianDistanceTest.cpp  GraphNegativeGroupFarnessTest.cpp  GraphPartialDominatingSetTest.cpp  MiscTest.cpp  init.JSON
